add application properties variable